# vtk_js

./: .gitignore  VTKCone.bundle.js  VTKPlotter.bundle.js  example.py  plotter.py  pyproject.toml  test_vtk_adrien.py  vtk_viewer.py
src/: app copy.js  app.js
tests/: test_example.py
vtk_panel/: VTKPlotter.bundle.js  compile.ps1  example.py  package-lock.json  package.json  plotter.py  vtk_viewer.py
